# naive_sing_box

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3ba402ca2015_init.py
backend/app/: bootstrap.py  config.py  db.py  deps.py  generators.py  main.py  models.py  reloader.py  schemas.py  security.py  services.py  subpage.py
backend/app/routers/: auth.py  clients.py  settings.py  subscription.py
backend/tests/: conftest.py  test_auth.py  test_bootstrap.py  test_clients.py  test_generators.py  test_reloader.py  test_security.py  test_services.py  test_settings.py  test_subpage.py  test_subscription.py
caddy/: Dockerfile
caddy/fallback/: index.html
docs/superpowers/plans/: 2026-06-01-naive-sing-box-mvp.md  2026-06-02-subscription-distribution.md  2026-06-03-singbox-client-macos-slice.md  2026-06-03-subscription-page.md
docs/superpowers/specs/: 2026-06-01-naive-sing-box-mvp-design.md  2026-06-02-subscription-distribution-design.md  2026-06-03-singbox-client-macos-slice-design.md  2026-06-03-subscription-page-design.md
frontend/: index.html  package-lock.json  package.json  sub.html  vite.config.js
frontend/src/: App.vue  api.js  router.js  style.css
frontend/src/sub/: SubApp.vue  main.js  sub.css
frontend/src/views/: Clients.vue  Login.vue  SettingsView.vue
