[project]
name = "naive-singbox-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4.1",
  "docker>=7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
